--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style type="text/css">
       body {
         background-color: #000;
+        color: #666;
         margin: 0;
       }
 
@@ -29,12 +30,28 @@
         margin: 0 auto;
         width: 448px;
       }
+
+      #footer {
+         bottom: 0;
+         font-family: sans-serif;
+         font-size: 12px;
+         height: 30px;
+         left: 0;
+         position: fixed;
+         text-align: center;
+         width: 100%;
+      }
     </style>
   </head>
   <body>
+    <div id="footer">
+      BoxBot4k | Sokoban game in 4k | &copy; 2014 Gabor Bata
+    </div>
     <div id="wrapper">
       <div id="container">
-        <canvas id="boxbot4k" width="448" height="384"></canvas>
+        <canvas id="boxbot4k" width="448" height="384">
+          The game is not supported by your browser.
+        </canvas>
       </div>
     </div>
     <script src="boxbot4k.js"></script>
