--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="wrapper">
       <div id="container">
         <canvas id="boxbot4k" width="448" height="384">
-          The game is not supported by your browser.
+          To play the game, your browser must support HTML5 Canvas.
         </canvas>
       </div>
     </div>
