--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Sokoban game in 4k">
     <meta name="copyright" content="Copyright (c) 2014 Gabor Bata">
     <meta property="og:title" content="BoxBot4k">
-    <meta property="og:description" content="BoxBot4k is a clone of the famous Sokoban game in 4 kB of JavaScript. The goal of the game to push boxes around a maze and try to put them in designated locations (squares with red pattern) by controlling a robot. Only one box may be pushed at a time, and boxes cannot be pulled.">
+    <meta property="og:description" content="BoxBot4k is a clone of the famous Sokoban game. The goal of the game to push boxes around a maze and try to put them in designated locations. Only one box may be pushed at a time, and boxes cannot be pulled.">
     <meta property="og:type" content="game">
     <meta property="og:url" content="http://gaborbata.github.io/boxbot4k/">
     <meta property="og:image" content="http://gaborbata.github.io/boxbot4k/boxbot4k.png">
