--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </head>
   <body>
     <div id="footer">
-      BoxBot4k | Sokoban game in 4k | &copy; 2014 Gabor Bata
+      BoxBot4k | Sokoban puzzle game in 4k | &copy; 2014 Gabor Bata
     </div>
     <div id="wrapper">
       <div id="container">
